# bfvmm

./: .appveyor.yml  .codecov.yml  .doxygen.txt  .travis.yml  CMakeLists.txt  README.md
include/: vcpuid.h
include/debug_ring/: debug_ring.h
include/exit_handler/: exit_handler_intel_x64.h  exit_handler_intel_x64_entry.h  exit_handler_intel_x64_support.h  exit_handler_intel_x64_unittests.h
include/intrinsics/: cache_x64.h  cpuid_x64.h  crs_intel_x64.h  debug_x64.h  gdt_x64.h  idt_x64.h  msrs_intel_x64.h  msrs_x64.h  pdpte_x64.h  pm_x64.h  portio_x64.h  rdtsc_x64.h  rflags_x64.h  srs_x64.h  thread_context_x64.h  tlb_x64.h  tss_x64.h  vmcs_intel_x64_16bit_control_fields.h  vmcs_intel_x64_16bit_guest_state_fields.h  vmcs_intel_x64_16bit_host_state_fields.h  vmcs_intel_x64_32bit_control_fields.h  vmcs_intel_x64_32bit_guest_state_fields.h  vmcs_intel_x64_32bit_host_state_field.h  vmcs_intel_x64_32bit_read_only_data_fields.h  vmcs_intel_x64_64bit_control_fields.h  vmcs_intel_x64_64bit_guest_state_fields.h  vmcs_intel_x64_64bit_host_state_fields.h  vmcs_intel_x64_64bit_read_only_data_fields.h  vmcs_intel_x64_check.h  vmcs_intel_x64_check_controls.h  vmcs_intel_x64_check_guest.h  vmcs_intel_x64_check_host.h  vmcs_intel_x64_debug.h  vmcs_intel_x64_helpers.h  vmcs_intel_x64_natural_width_control_fields.h  vmcs_intel_x64_natural_width_guest_state_fields.h  vmcs_intel_x64_natural_width_host_state_fields.h  vmcs_intel_x64_natural_width_read_only_data_fields.h  vmx_intel_x64.h  x64.h
include/memory_manager/: map_ptr_x64.h  mem_pool.h  memory_manager_x64.h  object_allocator.h  page_table_entry_x64.h  page_table_x64.h  root_page_table_x64.h
include/serial/: serial_port_intel_x64.h
include/test/: vmcs_utils.h
include/vcpu/: vcpu.h  vcpu_factory.h  vcpu_intel_x64.h  vcpu_manager.h
include/vmcs/: vmcs_intel_x64.h  vmcs_intel_x64_16bit_control_fields.h  vmcs_intel_x64_16bit_guest_state_fields.h  vmcs_intel_x64_16bit_host_state_fields.h  vmcs_intel_x64_32bit_control_fields.h  vmcs_intel_x64_32bit_guest_state_fields.h  vmcs_intel_x64_32bit_host_state_field.h  vmcs_intel_x64_32bit_read_only_data_fields.h  vmcs_intel_x64_64bit_control_fields.h  vmcs_intel_x64_64bit_guest_state_fields.h  vmcs_intel_x64_64bit_host_state_fields.h  vmcs_intel_x64_64bit_read_only_data_fields.h  vmcs_intel_x64_check.h  vmcs_intel_x64_debug.h  vmcs_intel_x64_helpers.h  vmcs_intel_x64_host_vm_state.h  vmcs_intel_x64_launch.h  vmcs_intel_x64_natural_width_control_fields.h  vmcs_intel_x64_natural_width_guest_state_fields.h  vmcs_intel_x64_natural_width_host_state_fields.h  vmcs_intel_x64_natural_width_read_only_data_fields.h  vmcs_intel_x64_promote.h  vmcs_intel_x64_resume.h  vmcs_intel_x64_state.h  (+1 more)
src/: CMakeLists.txt
src/debug_ring/src/: CMakeLists.txt  debug_ring.cpp
src/debug_ring/test/: CMakeLists.txt  test_debug_ring.cpp
src/debug_ring/tests/: CMakeLists.txt
src/exit_handler/src/: CMakeLists.txt  exit_handler_intel_x64.cpp  exit_handler_intel_x64_support_mock.cpp  exit_handler_intel_x64_unittests.cpp  exit_handler_intel_x64_unittests_containers.cpp  exit_handler_intel_x64_unittests_io.cpp
src/exit_handler/test/: CMakeLists.txt  test_exit_handler_intel_x64.cpp  test_exit_handler_intel_x64_entry.cpp
src/exit_handler/tests/: CMakeLists.txt  test_exit_handler_intel_x64.cpp
src/intrinsics/src/: CMakeLists.txt  cache_x64_mock.cpp  cpuid_x64.asm  cpuid_x64_mock.cpp  crs_intel_x64.asm  crs_intel_x64_mock.cpp  debug_x64_mock.cpp  gdt_x64_mock.cpp  idt_x64.asm  idt_x64_mock.cpp  isr_x64.cpp  msrs_intel_x64_mock.cpp  msrs_x64_mock.cpp  pm_x64_mock.cpp  portio_x64_mock.cpp  rdtsc_x64_mock.cpp  rflags_x64_mock.cpp  srs_x64_mock.cpp  thread_context_x64_mock.cpp  tlb_x64_mock.cpp  vmx_intel_x64_mock.cpp
src/intrinsics/test/: CMakeLists.txt  test_cpuid_x64.cpp  test_crs_intel_x64.cpp  test_debug_x64.cpp  test_gdt_x64.cpp  test_msrs_x64.cpp  test_portio_x64.cpp  test_rdtsc_x64.cpp  test_rflags_x64.cpp  test_vmcs_intel_x64_check_controls.cpp  test_vmcs_intel_x64_check_guest.cpp  test_vmcs_intel_x64_debug.cpp  test_vmcs_intel_x64_helpers.cpp  test_vmx_intel_x64.cpp
src/intrinsics/tests/: CMakeLists.txt  test_cache_x64.cpp  test_cpuid_x64.cpp  test_crs_intel_x64.cpp  test_idt_x64.cpp  test_msrs_intel_x64.cpp  test_pdpte_x64.cpp  test_pm_x64.cpp  test_srs_x64.cpp  test_tlb_x64.cpp  test_vmcs_intel_x64_16bit_guest_state_fields.cpp  test_vmcs_intel_x64_32bit_control_fields.cpp  test_vmcs_intel_x64_32bit_read_only_data_fields.cpp  test_vmcs_intel_x64_64bit_control_fields.cpp  test_vmcs_intel_x64_check_controls.cpp  test_vmcs_intel_x64_check_host.cpp  test_vmcs_intel_x64_helpers.cpp  test_vmcs_intel_x64_natural_width_read_only_data_fields.cpp
src/main/: CMakeLists.txt  main.cpp
src/memory_manager/src/: CMakeLists.txt  map_ptr_x64.cpp  memory_manager_x64.cpp  page_table_entry_x64.cpp  page_table_x64.cpp  root_page_table_x64.cpp
src/memory_manager/tests/: CMakeLists.txt  test_mem_pool.cpp  test_memory_manager_x64.cpp  test_object_allocator.cpp  test_root_page_table_x64.cpp
src/serial/src/: CMakeLists.txt  serial_port_intel_x64.cpp
src/serial/test/: CMakeLists.txt  test_serial_port_intel_x64.cpp
src/support/: CMakeLists.txt  unistd.cpp
src/vcpu/src/: CMakeLists.txt  vcpu.cpp  vcpu_factory.cpp  vcpu_intel_x64.cpp  vcpu_manager.cpp
src/vcpu/tests/: CMakeLists.txt  test_vcpu.cpp  test_vcpu_intel_x64.cpp  test_vcpu_manager.cpp
src/vcpu_factory/src/: CMakeLists.txt
src/vcpu_manager/src/: CMakeLists.txt
src/vmcs/src/: CMakeLists.txt  vmcs_intel_x64.cpp  vmcs_intel_x64_check_controls.cpp  vmcs_intel_x64_check_guest.cpp  vmcs_intel_x64_check_host.cpp  vmcs_intel_x64_host_vm_state.cpp  vmcs_intel_x64_launch_mock.cpp  vmcs_intel_x64_promote.asm  vmcs_intel_x64_promote_mock.cpp  vmcs_intel_x64_resume_mock.cpp  vmcs_intel_x64_vmm_state.cpp
src/vmcs/tests/: CMakeLists.txt  test_vmcs_intel_x64.cpp  test_vmcs_intel_x64_host_vm_state.cpp  test_vmcs_intel_x64_state.cpp  test_vmcs_intel_x64_vmm_state.cpp
src/vmxon/src/: CMakeLists.txt  vmxon_intel_x64.cpp
test/: CMakeLists.txt
tests/: CMakeLists.txt
(+73 files in other folders)
